--- a/app/src/main/res/layout/act_listar.xml
+++ b/app/src/main/res/layout/act_listar.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">
 
         <LinearLayout
+            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
