--- a/app/src/main/res/layout/act_adicionar_galaxia.xml
+++ b/app/src/main/res/layout/act_adicionar_galaxia.xml
@@ -25,99 +25,126 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <EditText
-        android:id="@+id/edtNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="-32dp">
 
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/edtID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <EditText
+                android:id="@+id/edtNome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        android:inputType="numberSigned"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNome" />
+                android:layout_marginTop="32dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/edtID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberSigned"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edtNome" />
+
+            <EditText
+                android:id="@+id/edt_qtde_sistemas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberSigned"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edtID" />
+
+            <EditText
+                android:id="@+id/edt_dist_terra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberSigned"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_qtde_sistemas" />
+
+            <TextView
+                android:id="@+id/lbl_nome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome"
+                app:layout_constraintBottom_toTopOf="@+id/edtNome"
+                app:layout_constraintStart_toStartOf="@+id/edtNome" />
+
+            <TextView
+                android:id="@+id/lbl_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID"
+                app:layout_constraintBottom_toTopOf="@+id/edtID"
+                app:layout_constraintStart_toStartOf="@+id/edtID" />
+
+            <TextView
+                android:id="@+id/llbl_tamanho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantidade de Sistemas"
+                app:layout_constraintBottom_toTopOf="@+id/edt_qtde_sistemas"
+                app:layout_constraintStart_toStartOf="@+id/edt_qtde_sistemas" />
+
+            <TextView
+                android:id="@+id/lbl_dist_terra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Distância da Terra"
+                app:layout_constraintBottom_toTopOf="@+id/edt_dist_terra"
+                app:layout_constraintStart_toStartOf="@+id/edt_dist_terra" />
 
 
+            <Button
+                android:id="@+id/btn_adicionar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="clickBtnAdicionarGalaxia"
+                android:text="@string/adicionar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_dist_terra" />
+            <Button
+                android:id="@+id/btn_modificar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="clickBtnModificarGalaxia"
+                android:text="@string/modificar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_dist_terra" />
 
-    <TextView
-        android:id="@+id/lbl_nome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nome"
-        app:layout_constraintBottom_toTopOf="@+id/edtNome"
-        app:layout_constraintStart_toStartOf="@+id/edtNome" />
 
-    <TextView
-        android:id="@+id/lbl_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ID"
-        app:layout_constraintBottom_toTopOf="@+id/edtID"
-        app:layout_constraintStart_toStartOf="@+id/edtID" />
-
-
-    <EditText
-        android:id="@+id/edtQtdeSistemas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-
-        android:inputType="numberSigned"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtID" />
-
-    <EditText
-        android:id="@+id/edtDistTerra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtQtdeSistemas" />
-
-    <TextView
-        android:id="@+id/lbl_qtde"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantidade de Sistemas"
-        app:layout_constraintBottom_toTopOf="@+id/edtQtdeSistemas"
-        app:layout_constraintStart_toStartOf="@+id/edtQtdeSistemas" />
-
-    <TextView
-        android:id="@+id/lbl_dist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Distância da Terra"
-        app:layout_constraintBottom_toTopOf="@+id/edtDistTerra"
-        app:layout_constraintStart_toStartOf="@+id/edtDistTerra" />
-
-    <Button
-        android:id="@+id/btn_adicionar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:onClick="clickBtnAdicionarGalaxia"
-        android:text="@string/adicionar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtDistTerra" />
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
