--- a/app/src/main/res/layout/act_adicionarplaneta.xml
+++ b/app/src/main/res/layout/act_adicionarplaneta.xml
@@ -24,145 +24,166 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="-32dp">
 
-    <EditText
-        android:id="@+id/edtNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edt_nome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="32dp"
+                android:ems="10"
                 android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/edtID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <EditText
+                android:id="@+id/edt_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        android:inputType="numberSigned"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNome" />
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberSigned"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_nome" />
 
-    <EditText
-        android:id="@+id/edtTamanho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <EditText
+                android:id="@+id/edt_tamanho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_ID" />
 
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtID" />
+            <EditText
+                android:id="@+id/edt_massa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_tamanho" />
 
-    <EditText
-        android:id="@+id/edtMassa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <EditText
+                android:id="@+id/edt_gravidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_massa" />
 
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtTamanho" />
+            <EditText
+                android:id="@+id/edt_composicao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_gravidade" />
 
-    <EditText
-        android:id="@+id/edtGravidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <TextView
+                android:id="@+id/lbl_nome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome"
+                app:layout_constraintBottom_toTopOf="@+id/edt_nome"
+                app:layout_constraintStart_toStartOf="@+id/edt_nome" />
 
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtMassa" />
+            <TextView
+                android:id="@+id/lbl_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID"
+                app:layout_constraintBottom_toTopOf="@+id/edt_ID"
+                app:layout_constraintStart_toStartOf="@+id/edt_ID" />
 
-    <EditText
-        android:id="@+id/edtComposicao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
+            <TextView
+                android:id="@+id/lbl_tamanho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tamanho"
+                app:layout_constraintBottom_toTopOf="@+id/edt_tamanho"
+                app:layout_constraintStart_toStartOf="@+id/edt_tamanho" />
 
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtGravidade" />
+            <TextView
+                android:id="@+id/lbl_massa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Massa"
+                app:layout_constraintBottom_toTopOf="@+id/edt_massa"
+                app:layout_constraintStart_toStartOf="@+id/edt_massa" />
+
+            <TextView
+                android:id="@+id/lbl_gravidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gravidade"
+                app:layout_constraintBottom_toTopOf="@+id/edt_gravidade"
+                app:layout_constraintStart_toStartOf="@+id/edt_gravidade" />
+
+            <TextView
+                android:id="@+id/lbl_composicao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Composição"
+                app:layout_constraintBottom_toTopOf="@+id/edt_composicao"
+                app:layout_constraintStart_toStartOf="@+id/edt_composicao" />
 
 
-    <TextView
-        android:id="@+id/lbl_nome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nome"
-        app:layout_constraintBottom_toTopOf="@+id/edtNome"
-        app:layout_constraintStart_toStartOf="@+id/edtNome" />
+            <Button
+                android:id="@+id/btn_adicionar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="clickBtnAdicionarPlaneta"
+                android:text="@string/adicionar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_composicao" />
+            <Button
+                android:id="@+id/btn_modificar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="clickBtnModificarPlaneta"
+                android:text="@string/modificar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_composicao" />
 
-    <TextView
-        android:id="@+id/lbl_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ID"
-        app:layout_constraintBottom_toTopOf="@+id/edtID"
-        app:layout_constraintStart_toStartOf="@+id/edtID" />
 
-    <TextView
-        android:id="@+id/lbl_tamanho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tamanho"
-        app:layout_constraintBottom_toTopOf="@+id/edtTamanho"
-        app:layout_constraintStart_toStartOf="@+id/edtTamanho" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-    <TextView
-        android:id="@+id/lbl_massa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Massa"
-        app:layout_constraintBottom_toTopOf="@+id/edtMassa"
-        app:layout_constraintStart_toStartOf="@+id/edtMassa" />
-
-    <TextView
-        android:id="@+id/lbl_gravidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gravidade"
-        app:layout_constraintBottom_toTopOf="@+id/edtGravidade"
-        app:layout_constraintStart_toStartOf="@+id/edtGravidade" />
-
-    <TextView
-        android:id="@+id/lbl_comp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Composição"
-        app:layout_constraintBottom_toTopOf="@+id/edtComposicao"
-        app:layout_constraintStart_toStartOf="@+id/edtComposicao" />
-
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:onClick="clickBtnAdicionarPlaneta"
-        android:text="Adicionar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtComposicao" />
-
-    <TextView
-        android:id="@+id/lbl_composicao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Composição"
-        app:layout_constraintBottom_toTopOf="@+id/edtComposicao"
-        app:layout_constraintStart_toStartOf="@+id/edtComposicao" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
